UTubs and URLs refactored. Tags still in work

--- a/urls4irl/templates/layout.html
+++ b/urls4irl/templates/layout.html
@@ -45,8 +45,8 @@
 
     <!-- Bootstrap -- local dev -->
     <link rel="stylesheet" href="/static/styles/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/styles/bootstrap-reboot.min.css">
-    <link rel="stylesheet" href="/static/styles/bootstrap-grid.min.css">
+    <!-- <link rel="stylesheet" href="/static/styles/bootstrap-reboot.min.css"> -->
+    <!-- <link rel="stylesheet" href="/static/styles/bootstrap-grid.min.css"> -->
 
     <!-- FontAwesome -- comment out for local dev -->
     <!-- https://fontawesome.com/v4/get-started/ -->
@@ -55,6 +55,9 @@
     <!-- Custom CSS adjustments -->
     <link rel="stylesheet" href="/static/styles/app.css">
 
+    <!-- Fix to remove favicon.ico error -->
+    <!-- https://stackoverflow.com/questions/31075893/how-to-fix-favicon-ico-error-failed-to-load-resource-neterr-empty-response -->
+    <link rel="shortcut icon" href="#">
 
     <title>URLS4IRL</title>
 </head>
