--- a/urls4irl/templates/home.html
+++ b/urls4irl/templates/home.html
@@ -98,17 +98,26 @@
 
                 <!-- Production (5/5) -->
                 <i id="addURLBtn" class="bi bi-plus-square-fill fa-2x text-success mx-1" style="display: none;"></i>
-                <button id="accessAllURLsBtn" class="btn btn-primary mx-1" style="display: none;">Access All URLs in UTub</button> 
                 <!-- Production (5/5) -->
             </div>
         </div>
         <div class="row justify-content-center mx-2">
-            <div class="col-12 col-lg-12 mb-md-0 text-left">
+            <div class="col-9 col-lg-9 mb-md-0 text-left">
                 <p id="UTubDescription" style="display: inline-block"></p>
                 <div class="createDiv" style="display: none">
                     <textarea cols="40" rows="5" id="editUTubDescription" class="userInput"
                         placeholder="Describe the contents of your UTub (optional)"></textarea>
                 </div>
+            </div>
+            <div class="col-3 col-lg-3 mb-md-0 text-right">
+
+                <!-- Local Dev (5/5) -->
+                <!-- <button id="addURLBtn" class="bi bi-plus-square-fill fa-2x btn-success mx-1" style="display: none;">+</button> -->
+                <!-- Local Dev (5/5) -->
+
+                <!-- Production (5/5) -->
+                <button id="accessAllURLsBtn" class="btn btn-primary mx-1" style="display: none;">Access All URLs in UTub</button> 
+                <!-- Production (5/5) -->
             </div>
         </div>
         <div class="deckContent justify-content-center">
