Fix register modal button, update email error response

--- a/src/templates/email_validation/email_needs_validation_modal.html
+++ b/src/templates/email_validation/email_needs_validation_modal.html
@@ -16,12 +16,10 @@
     <div class="modal-body">
         {{ validate_email_form.hidden_tag() }}
         <p id="ValidateEmailText" class="validate-email-text">Your email address has not been validated. To complete
-            your registration, please click the button below to receive a validation email.</p>
+            your registration, <strong>please click</strong> the button below to receive a validation email.</p>
         <div id="SplashModalAlertBanner" class="alert alert-banner-splash-modal-hide" role="alert"></div>
         <div class="modal-footer">
             <button type="button" class="btn btn-warning close-modal login-register-form-group center-block col-4" data-dismiss="modal">Close</button>
-            <!-- <a class="btn btn-warning col-4 login-register-form-group login-buttons center-block close-modal"
-                href="javascript:;">Close</a> -->
             {{ validate_email_form.submit(class="btn btn-success login-register-form-group login-buttons center-block
             col-8")}}
         </div>
