--- a/src/templates/splash.html
+++ b/src/templates/splash.html
@@ -7,25 +7,10 @@
     <div class="container-fluid bg-cover">
         <div class="container-fluid jumbotron-holder">
             <div class="jumbotron jumbotron-fluid">
-                <div class="container">
-                    <div class="row justify-content-center">
-                        <h1 class="display-4">Welcome to URLS4IRL</h1>
-                    </div>
-                    <div class="row justify-content-center">
-                        <p class="lead login-register-label">A simple, clean way to permanently save and share URLs.</p>
-                    </div>
-                    <div class="row justify-content-center">
-                        <div class="col-xl-4 col-md-8">
-                            <a class="btn btn-success to-register btn-block splash-button"
-                                href="javascript:;">Register</a>
-                        </div>
-                    </div>
-                    <div class="row justify-content-center my-auto">
-                        <div class="col-xl-4 col-md-8">
-                            <a class="btn btn-success to-login btn-block splash-button" href="javascript:;">Login</a>
-                        </div>
-                    </div>
-                </div>
+                <h1 class="display-4">Welcome to URLS4IRL</h1>
+                <p class="lead login-register-label">A simple, clean way to permanently save and share URLs.</p>
+                <a class="btn btn-success to-register btn-block splash-button" href="javascript:;">Register</a>
+                <a class="btn btn-success to-login btn-block splash-button" href="javascript:;">Login</a>
             </div>
         </div>
     </div>
