--- a/src/templates/password_reset/forgot_password.html
+++ b/src/templates/password_reset/forgot_password.html
@@ -6,16 +6,16 @@
 <form id="ModalForm" method="POST" class="login-register-form" action="" novalidate>
     <div class="modal-header">
         <h4 class="modal-title">Forgot your password?</h4>
-        <button type="button" class="close close-modal" data-dismiss="modal" aria-label="close">
-            <span aria-hidden="true">&times;</span>
+        <button type="button" class="btn-close close-modal" data-bs-dismiss="modal" aria-label="close">
         </button>
     </div>
     <div class="modal-body">
         {{ forgot_password_form.hidden_tag() }}
-        <p id="ForgotPasswordText">Enter the email associated with your account. An email will be sent to reset your password.</p>
+        <p id="ForgotPasswordText">Enter the email associated with your account. An email will be sent to reset your
+            password.</p>
         <fieldset class="form-group">
             <div class="form-group forgot-password-form-group">
-                {{ forgot_password_form.email.label(class="form-control-label login-register-label")}}
+                {{ forgot_password_form.email.label(class="form-control-label forgot-password-email-label")}}
                 {% if forgot_password_form.email.errors %}
                 {{ forgot_password_form.email(class="form-control login-register-form-group is-invalid") }}
                 <div class="invalid-feedback">
@@ -31,6 +31,6 @@
         <div id="SplashModalAlertBanner" class="alert alert-banner-splash-modal-hide" role="alert"></div>
     </div>
     <div class="modal-footer">
-        {{ forgot_password_form.submit(class="btn btn-success login-register-form-group login-buttons center-block col-12")}}
+        {{ forgot_password_form.submit(class="btn btn-success login-register-form-group login-register-buttons center-block col-12")}}
     </div>
 </form>
