--- a/src/templates/email_validation/email_needs_validation_modal.html
+++ b/src/templates/email_validation/email_needs_validation_modal.html
@@ -8,8 +8,7 @@
         <div class="email-container">
             <div id="ValidateEmailIcon">✉️</div>
             <h1 class="modal-title validate-email-text validate-email-title">Validate Your Email!</h1>
-            <button type="button" class="close modal-close close-modal" data-dismiss="modal" aria-label="close">
-                <span aria-hidden="true">&times;</span>
+            <button type="button" class="btn-close modal-close close-modal" data-bs-dismiss="modal" aria-label="close">
             </button>
         </div>
     </div>
@@ -18,11 +17,13 @@
         <p id="ValidateEmailText" class="validate-email-text">Your email address has not been validated. To complete
             your registration, <strong>please click</strong> the button below to receive a validation email.</p>
         <div id="SplashModalAlertBanner" class="alert alert-banner-splash-modal-hide" role="alert"></div>
-        <div class="modal-footer">
-            <button type="button" class="btn btn-warning close-modal login-register-form-group center-block col-4" data-dismiss="modal">Close</button>
-            {{ validate_email_form.submit(class="btn btn-success login-register-form-group login-buttons center-block
-            col-8")}}
-        </div>
+    </div>
+    <div class="modal-footer" id="EmailValidationFooter">
+        <button type="button" class="btn btn-warning close-modal login-register-form-group center-block col-4"
+            data-bs-dismiss="modal">Close</button>
+        {{ validate_email_form.submit(class="btn btn-success login-register-form-group login-register-buttons center-block
+        col-8")}}
+    </div>
 </form>
 
 <script>
