--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -22,8 +22,19 @@
             <!-- Local Dev (1/5) -->
 
             <!-- Production (1/5) -->
-            <i id="createUTubButton" class="bi bi-plus-square-fill fa-2x text-success mx-1"></i>
-            <i id="deleteUTubButton" class="bi bi-x-square-fill fa-2x text-danger mx-1" style="display:none"></i>
+            <i id="createUTubButton" class="mx-1">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+                    class="bi bi-plus-square-fill text-success" viewBox="0 0 16 16">
+                    <path
+                        d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm6.5 4.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3a.5.5 0 0 1 1 0" />
+                </svg>
+            </i>
+            <i id="deleteUTubButton" class="mx-1" style="display:none">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+                    class="bi bi-x-square-fill text-danger" viewBox="0 0 16 16">
+                    <path
+                        d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm3.354 4.646L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 1 1 .708-.708" />
+                </svg></i>
             <!-- Production (1/5) -->
         </div>
 
@@ -78,7 +89,11 @@
                     <!-- Local Dev (3/5) -->
 
                     <!-- Production (3/5) -->
-                    <i id="submitEditUTubButton" class="fa fa-check-square fa-2x text-success mx-1" type="button"></i>
+                    <i id="submitEditUTubButton" class="mx-1" type="button">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-square-fill  text-success" viewBox="0 0 16 16">
+                            <path d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm10.03 4.97a.75.75 0 0 1 .011 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.75.75 0 0 1 1.08-.022z"/>
+                          </svg>
+                    </i>
                     <!-- Production (3/5) -->
                 </div>
 
@@ -87,7 +102,12 @@
                 <!-- Local Dev (4/5) -->
 
                 <!-- Production (4/5) -->
-                <i id="editUTubButton" class="bi bi-pencil-square fa-2x mx-1" style="display: none; color: #545454"></i>
+                <i id="editUTubButton" class="mx-1" style="display: none; color: #545454">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                        <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                        <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/>
+                      </svg>
+                </i>
                 <!-- Production (4/5) -->
             </div>
             <div class="col-3 col-lg-3 mb-md-0 text-right">
@@ -97,7 +117,13 @@
                 <!-- Local Dev (5/5) -->
 
                 <!-- Production (5/5) -->
-                <i id="addURLBtn" class="bi bi-plus-square-fill fa-2x text-success mx-1" style="display: none;"></i>
+                <i id="addURLBtn" class="mx-1" style="display: none;">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+                        class="bi bi-plus-square-fill text-success" viewBox="0 0 16 16">
+                        <path
+                            d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm6.5 4.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3a.5.5 0 0 1 1 0" />
+                    </svg>
+                </i>
                 <!-- Production (5/5) -->
             </div>
         </div>
@@ -116,7 +142,8 @@
                 <!-- Local Dev (5/5) -->
 
                 <!-- Production (5/5) -->
-                <button id="accessAllURLsBtn" class="btn btn-primary mx-1" style="display: none;">Access All URLs in UTub</button> 
+                <button id="accessAllURLsBtn" class="btn btn-primary mx-1" style="display: none;">Access All URLs in
+                    UTub</button>
                 <!-- Production (5/5) -->
             </div>
         </div>
