CSS Classes for icons

--- a/src/static/styles/app.css
+++ b/src/static/styles/app.css
@@ -158,6 +158,10 @@ i.fa-check-square {
     float: right;
 }
 
+.green-clickable {
+    color: var(--splashGreen);
+}
+
 .tag-remove {
     padding: 0rem;
     vertical-align: unset;
