--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -16,13 +16,8 @@
         </div>
         <div class="col-3 col-lg-3 mb-md-0 text-right d-flex justify-content-center flex-row">
 
-            <!-- Local Dev (1/5) -->
-            <!-- <button id="createUTubButton" class="bi bi-plus-square-fill fa-2x btn-success mx-1">+</button>
-                <button id="deleteUTubButton" class="bi bi-x-square-fill fa-2x btn-danger mx-1" style="display:none">X</button> -->
-            <!-- Local Dev (1/5) -->
-
             <!-- Production (1/5) -->
-            <i id="createUTubButton" class="mx-1">
+            <i id="createUTubButton" class="green-clickable mx-1">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                     class="bi bi-plus-square-fill text-success" viewBox="0 0 16 16">
                     <path
@@ -53,13 +48,6 @@
         </div>
         <div class="col-3 col-lg-3 mb-md-0 text-right">
             <div class="d-flex justify-content-center flex-row">
-
-                <!-- Local Dev (2/5) -->
-                <!-- <button class="bi bi-plus-square-fill fa-2x btn-success mx-1" id="createTagButton" style="display:none">+</button>
-                <button class="bi bi-pencil-square fa-2x btn-warning mx-1" id="editTagButton" style="display:none">edit</button>
-                <button class="fa fa-check-square fa-2x btn-success mx-1" id="submitTagButton" style="display:none">check</button> -->
-                <!-- Local Dev (2/5) -->
-
                 <!-- Production (2/5) -->
                 <!-- <i class="bi bi-plus-square-fill fa-2x text-success mx-1" id="createTagButton" style="display:none"></i>
                 <i class="bi bi-pencil-square fa-2x text-warning mx-1" id="editTagButton" style="display:none"></i>
@@ -84,9 +72,6 @@
                 <h2 id="URLDeckHeader" style="display: inline-block"></h2>
                 <div class="createDiv" style="display: none">
                     <input type="text" id="editUTubName" class="userInput">
-                    <!-- Local Dev (3/5) -->
-                    <!-- <button id="submitEditUTubButton" class="fa fa-check-square fa-2x text-success mx-1" type="button">check</button> -->
-                    <!-- Local Dev (3/5) -->
 
                     <!-- Production (3/5) -->
                     <i id="submitEditUTubButton" class="mx-1" type="button">
@@ -96,10 +81,6 @@
                     </i>
                     <!-- Production (3/5) -->
                 </div>
-
-                <!-- Local Dev (4/5) -->
-                <!-- <button id="editUTubButton" class="bi bi-pencil-square fa-2x mx-1" style="display: none; color: #545454">edit</button> -->
-                <!-- Local Dev (4/5) -->
 
                 <!-- Production (4/5) -->
                 <i id="editUTubButton" class="mx-1" style="display: none; color: #545454">
@@ -112,12 +93,8 @@
             </div>
             <div class="col-3 col-lg-3 mb-md-0 text-right">
 
-                <!-- Local Dev (5/5) -->
-                <!-- <button id="addURLBtn" class="bi bi-plus-square-fill fa-2x btn-success mx-1" style="display: none;">+</button> -->
-                <!-- Local Dev (5/5) -->
-
                 <!-- Production (5/5) -->
-                <i id="addURLBtn" class="mx-1" style="display: none;">
+                <i id="addURLBtn" class="green-clickable mx-1" style="display: none;">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         class="bi bi-plus-square-fill text-success" viewBox="0 0 16 16">
                         <path
