--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -116,8 +116,7 @@
                 <form id="ModalForm" name="stepForm" class="form" method="post" action="" novalidate>
                     <div class="modal-header">
                         <h4 id="confirmModalTitle" class="modal-title"></h4>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="close">
-                            <span aria-hidden="true">&times;</span>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="close">
                         </button>
                     </div>
                     <div id="confirmModalBody" class="modal-body">
