--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -62,9 +62,11 @@
     <!-- Custom CSS adjustments -->
     <link rel="stylesheet" href="/static/styles/app.css">
 
-    <!-- Fix to remove favicon.ico error -->
-    <!-- https://stackoverflow.com/questions/31075893/how-to-fix-favicon-ico-error-failed-to-load-resource-neterr-empty-response -->
-    <link rel="shortcut icon" href="#">
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/static/favicon/site.webmanifest">
 
     <title>URLS4IRL</title>
 </head>
@@ -72,7 +74,12 @@
 <body class="d-flex flex-column vh-100">
     <!-- Navigation Bar -->
     <nav id="mainNavbar" class="navbar navbar-expand-md navbar-dark bg-dark py-0 fixed-top">
-        <a class="navbar-brand navbar-start" href="#">URLS4IRL</a>
+        <a class="navbar-brand navbar-start" href="#">
+            URLS4IRL
+            <div id="iconContainer">
+                <img id="u4iFavicon" src="/static/favicon/android-chrome-192x192.png" />
+            </div>
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
